[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_ar"
version = "0.1.0"
description = "Composable DeepAR implementation"
authors = [{ name="Muntasir Raihan Rahman" }]
dependencies = ["torch>=2.0"]
readme = ""

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
